Fixed missing dependencies for Kivy in GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run Tests (Headless Mode)
-        run: xvfb-run python your_script.py
+        run: xvfb-run python pooplog.py
