--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,9 @@ jobs:
           python-version: '3.10'
 
       - name: Install Python Dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          pip install --upgrade https://github.com/kivymd/KivyMD/archive/master.zip
 
       - name: Recreate Firebase Service Account JSON
         run: |
