Fix: Debugging Kivy app freezing issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,3 +38,9 @@ jobs:
 
       - name: Run Tests (Headless Mode)
         run: xvfb-run python pooplog.py
+        
+      - name: Run Kivy App in Headless Mode
+        run: xvfb-run --server-args="-screen 0 1024x768x24" python pooplog.py
+        
+        
+    
