--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         run: xvfb-run python pooplog.py
 
     
-      - name: Run Kivy App in Debug Mode
-        run: xvfb-run --server-args="-screen 0 1920x1080x24" python pooplog.py -d
+      - name: Run Kivy App in Headless Mode (Non-blocking)
+        run: xvfb-run --server-args="-screen 0 1920x1080x24" python pooplog.py &
         
     
